[package]
name = "proj-to-dot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
structopt = "0"
tree-sitter = "0.20.0"
tree-sitter-coremake = { git = "https://github.com/matze/tree-sitter-coremake" }
